disallow-privileged-containers.yaml
name: disallow-privileged-containers
description: >-
  Privileged mode disables most security mechanisms and must not be allowed. This policy
  ensures Pods do not call for privileged mode.  
engine: kyverno
rule:
  apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    name: disallow-privileged-containers
    annotations:
      policies.kyverno.io/title: Disallow Privileged Containers
      policies.kyverno.io/category: Pod Security Standards (Baseline)
      policies.kyverno.io/severity: medium
      policies.kyverno.io/subject: Pod
      kyverno.io/kyverno-version: 1.6.0
      kyverno.io/kubernetes-version: "1.22-1.23"
      policies.kyverno.io/description: >-
        Privileged mode disables most security mechanisms and must not be allowed. This policy
        ensures Pods do not call for privileged mode.      
  spec:
    validationFailureAction: audit
    background: true
    rules:
      - name: privileged-containers
        match:
          any:
          - resources:
              kinds:
                - Pod
        validate:
          message: >-
            Privileged mode is disallowed. The fields spec.containers[*].securityContext.privileged
            and spec.initContainers[*].securityContext.privileged must be unset or set to `false`.          
          pattern:
            spec:
              =(ephemeralContainers):
                - =(securityContext):
                    =(privileged): "false"
              =(initContainers):
                - =(securityContext):
                    =(privileged): "false"
              containers:
                - =(securityContext):
                    =(privileged): "false"
